--- a/locustempus/home.html
+++ b/locustempus/home.html
@@ -1,9 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home: Locus Tempus</title>
+    <title>Locus Tempus Index</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap 4.5 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Custom -->
+    <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
+    <header>
+        <a class="skippy sr-only sr-only-focusable" href="#content">
+        <span class="skippy-text">Skip to main content</span>
+        </a>
+        <nav class="navbar navbar-dark bg-dark">
+            <a class="navbar-brand"><img src="temp-logo.png" alt="temp-logo"></a>
+            <form class="form-inline">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Log in</button>
+            </form>
+        </nav>
+    </header>
+    
+    <main>
+        <section class="feature-hero">
+            <div class="hero-text">
+            <h1 style="font-size:50px">Super awesome mapping tool for learning</h1>
+            <p>Collaborative and Analysis</p>
+            <button>Try me</button>
+            </div>
+        </section>
+
+        <section class="feature-desc container">
+            <h2 class="text-center">A little bit more description</h2>
+            <p class="text-center">Nam congue rhoncus pellentesque. Morbi tellus odio, dignissim fermentum sollicitudin sed, accumsan non libero. Proin odio justo, vulputate at vestibulum quis, sollicitudin id dui. Nunc et vehicula urna. Nullam pharetra ipsum mauris, ac elementum neque venenatis quis. Nunc vitae metus.</p>
+        </section>
+
+        <section class="feature-1 container">
+            <div class="row">
+            <div class="col-sm">
+            <h2>Verb feature 1</h2>
+            <p>Phasellus maximus pretium elit at condimentum. Aenean diam sem, ultricies non volutpat non, dignissim id eros. Nunc ut egestas libero. Curabitur pellentesque leo ut dolor maximus consectetur. Pellentesque tincidunt, tortor.</p>
+            </div>
+            <div class="col-sm">
+            <div class="bg-secondary image-placeholder"></div>
+            </div>
+            </div>
+        </section>
+
+        <section class="feature-2 container">
+            <div class="row">
+            <div class="col-sm">
+            <div class="bg-secondary image-placeholder"></div>
+            </div>
+            <div class="col-sm">
+            <h2>Verb feature 2</h2>
+            <p>Phasellus maximus pretium elit at condimentum. Aenean diam sem, ultricies non volutpat non, dignissim id eros. Nunc ut egestas libero. Curabitur pellentesque leo ut dolor maximus consectetur. Pellentesque tincidunt, tortor.</p>
+            </div>
+            </div>
+        </section>
+
+        <section class="feature-3 container">
+            <div class="row">
+            <div class="col-sm">
+            <h2>Verb feature 3</h2>
+            <p>Phasellus maximus pretium elit at condimentum. Aenean diam sem, ultricies non volutpat non, dignissim id eros. Nunc ut egestas libero. Curabitur pellentesque leo ut dolor maximus consectetur. Pellentesque tincidunt, tortor.</p>
+            </div>
+            <div class="col-sm">
+            <div class="bg-secondary image-placeholder"></div>
+            </div>
+            </div>
+        </section>
+
+        <section class="feature-action container">
+            <h2 class="text-center">Call to action</h2>
+            <p class="text-center">Nam congue rhoncus pellentesque. Morbi tellus odio, dignissim fermentum sollicitudin sed, accumsan non libero. Proin odio justo, vulputate at vestibulum quis, sollicitudin id dui. Nunc et vehicula urna. Nullam pharetra ipsum mauris, ac elementum neque venenatis quis. Nunc vitae metus.</p>
+            <p class="text-center"><button type="button" class="btn btn-secondary">Partner with us</button></p>
+        </section>
+    </main>
+    
+    <footer class="py-5 bg-dark text-light">
+  <div class="row container">
+    <div class="col-12 col-md">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
+      <small class="d-block mb-3 text-muted">&copy; 2017-2020</small>
+    </div>
+    <div class="col-6 col-md">
+      <h5>Features</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="text-muted" href="#">Cool stuff</a></li>
+        <li><a class="text-muted" href="#">Random feature</a></li>
+        <li><a class="text-muted" href="#">Team feature</a></li>
+        <li><a class="text-muted" href="#">Stuff for developers</a></li>
+        <li><a class="text-muted" href="#">Another one</a></li>
+        <li><a class="text-muted" href="#">Last time</a></li>
+      </ul>
+    </div>
+    <div class="col-6 col-md">
+      <h5>Resources</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="text-muted" href="#">Resource</a></li>
+        <li><a class="text-muted" href="#">Resource name</a></li>
+        <li><a class="text-muted" href="#">Another resource</a></li>
+        <li><a class="text-muted" href="#">Final resource</a></li>
+      </ul>
+    </div>
+    <div class="col-6 col-md">
+      <h5>Resources</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="text-muted" href="#">Business</a></li>
+        <li><a class="text-muted" href="#">Education</a></li>
+        <li><a class="text-muted" href="#">Government</a></li>
+        <li><a class="text-muted" href="#">Gaming</a></li>
+      </ul>
+    </div>
+    <div class="col-6 col-md">
+      <h5>About</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="text-muted" href="#">Team</a></li>
+        <li><a class="text-muted" href="#">Locations</a></li>
+        <li><a class="text-muted" href="#">Privacy</a></li>
+        <li><a class="text-muted" href="#">Terms</a></li>
+      </ul>
+    </div>
+  </div>
+    </footer>
 
 </body>
 </html>
