--- a/locustempus/home.html
+++ b/locustempus/home.html
@@ -31,9 +31,15 @@
     <main>
         <section class="feature-hero">
             <div class="hero-text">
-            <h1 style="font-size:50px">Super awesome mapping tool for learning</h1>
+            <h1>Super awesome mapping tool for learning</h1>
             <p>Collaborative and Analysis</p>
-            <button>Try me</button>
+            <button class="btn btn-secondary" type="submit">
+            <span class="d-none d-xl-inline">Extra large</span>
+            <span class="d-none d-lg-inline d-xl-none">Large</span>
+            <span class="d-none d-md-inline d-lg-none">Medium</span>
+            <span class="d-none d-sm-inline d-md-none">Small</span>
+            <span class="d-inline d-sm-none">Extra small</span>
+            </button>
             </div>
         </section>
 
