--- a/locustempus/home.html
+++ b/locustempus/home.html
@@ -29,10 +29,10 @@
     </header>
     
     <main>
-        <section class="feature-hero">
+        <section class="feature hero">
             <div class="hero-text">
-            <h1>Super awesome mapping tool for learning</h1>
-            <p>Collaborative and Analysis</p>
+            <h1>A mapping application for spatial and chronological thinking</h1>
+            <p>Visualize. Analyze. Collaborate.</p>
             <button class="btn btn-secondary" type="submit">
             <span class="d-none d-xl-inline">Extra large</span>
             <span class="d-none d-lg-inline d-xl-none">Large</span>
@@ -43,51 +43,51 @@
             </div>
         </section>
 
-        <section class="feature-desc container">
-            <h2 class="text-center">A little bit more description</h2>
-            <p class="text-center">Nam congue rhoncus pellentesque. Morbi tellus odio, dignissim fermentum sollicitudin sed, accumsan non libero. Proin odio justo, vulputate at vestibulum quis, sollicitudin id dui. Nunc et vehicula urna. Nullam pharetra ipsum mauris, ac elementum neque venenatis quis. Nunc vitae metus.</p>
+        <section class="feature desc container">
+            <h2 class="text-center">Learning with time and space</h2>
+            <p class="text-center">Locus Tempus is a powerful but simple application designed to easily facilitate map-based learning activities across disciplines. Locus Tempus features tools for authoring maps, inviting collaborators, and analyzing data spatially and chronologically.</p>
         </section>
 
-        <section class="feature-1 container">
+        <section class="feature action container">
             <div class="row">
             <div class="col-sm">
-            <h2>Verb feature 1</h2>
-            <p>Phasellus maximus pretium elit at condimentum. Aenean diam sem, ultricies non volutpat non, dignissim id eros. Nunc ut egestas libero. Curabitur pellentesque leo ut dolor maximus consectetur. Pellentesque tincidunt, tortor.</p>
+            <h2>Visualize</h2>
+            <p>Foster spatial reasoning by using map layers to visualize geospatial data from different sources over time.</p>
             </div>
             <div class="col-sm">
-            <div class="bg-secondary image-placeholder"></div>
+            <div class="bg-light image-placeholder"></div>
             </div>
             </div>
         </section>
 
-        <section class="feature-2 container">
+        <section class="feature action container">
             <div class="row">
             <div class="col-sm">
-            <div class="bg-secondary image-placeholder"></div>
+            <div class="bg-light image-placeholder"></div>
             </div>
             <div class="col-sm">
-            <h2>Verb feature 2</h2>
-            <p>Phasellus maximus pretium elit at condimentum. Aenean diam sem, ultricies non volutpat non, dignissim id eros. Nunc ut egestas libero. Curabitur pellentesque leo ut dolor maximus consectetur. Pellentesque tincidunt, tortor.</p>
+            <h2>Analyze</h2>
+            <p>Tag, connect, and categorize events and layers to show patterns, trends, and relationships in your data for chronological and spatial reasoning.</p>
             </div>
             </div>
         </section>
 
-        <section class="feature-3 container">
+        <section class="feature action container">
             <div class="row">
             <div class="col-sm">
-            <h2>Verb feature 3</h2>
-            <p>Phasellus maximus pretium elit at condimentum. Aenean diam sem, ultricies non volutpat non, dignissim id eros. Nunc ut egestas libero. Curabitur pellentesque leo ut dolor maximus consectetur. Pellentesque tincidunt, tortor.</p>
+            <h2>Collaborate</h2>
+            <p>Share your map and allow others to contribute to your visualization and analysis. For higher education, Locus Tempus may be integrated into any content management system providing faculty a streamlined process for authoring maps and inviting student contributors.</p>
             </div>
             <div class="col-sm">
-            <div class="bg-secondary image-placeholder"></div>
+            <div class="bg-light image-placeholder"></div>
             </div>
             </div>
         </section>
 
-        <section class="feature-action container">
-            <h2 class="text-center">Call to action</h2>
-            <p class="text-center">Nam congue rhoncus pellentesque. Morbi tellus odio, dignissim fermentum sollicitudin sed, accumsan non libero. Proin odio justo, vulputate at vestibulum quis, sollicitudin id dui. Nunc et vehicula urna. Nullam pharetra ipsum mauris, ac elementum neque venenatis quis. Nunc vitae metus.</p>
-            <p class="text-center"><button type="button" class="btn btn-secondary">Partner with us</button></p>
+        <section class="feature action container">
+            <h2 class="text-center">Partner with us</h2>
+            <p class="text-center">If you’re interested in implementing this tool in your teaching practice, or to learn more about Locus Tempus, please reach out to the CTL project team that is developing Locus Tempus.</p>
+            <p class="text-center"><button type="button" class="btn btn-secondary">Contact us</button></p>
         </section>
     </main>
     
