--- a/locustempus/index.html
+++ b/locustempus/index.html
@@ -17,6 +17,7 @@
             background: url('temp-logo.png') no-repeat left bottom;
             color: transparent;
             border-bottom: 0.0625rem solid #ccc;
+            background-color: #333333;
         }
     </style>
 </head>
@@ -26,6 +27,7 @@
 
 <ul>
     <li><a href="home.html">Landing page</a></li>
+    <li><a href="theme.html">Theme colors</a></li>
 </ul>
 
 </body>
