--- a/locustempus/index.html
+++ b/locustempus/index.html
@@ -28,6 +28,7 @@
 <ul>
     <li><a href="home.html">Landing page</a></li>
     <li><a href="theme.html">Theme colors</a></li>
+    <li><a href="logo.html">Logo</a></li>
 </ul>
 
 </body>
