--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="navbar top-bar">
-        <div class="container">
+        <div class="container top-bar__container">
             <a href="/" class="navbar-brand d-flex align-items-center">
             <img class="gn-i me-3" src="shapes.svg" style="width: 2.875rem; height: 2.875rem; filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
             <span>Logic Learner</span>
