--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -31,13 +31,13 @@
             <ul class="nav col-auto top-bar__nav">
                 <li>
                   <a href="#" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1" src="home.svg" style="width: 1.5rem; height: 1.5rem; filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
+                    <img class="gn-i d-block mx-auto mb-1" src="home.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
                     Home
                   </a>
                 </li>
                 <li>
                   <a href="#" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1" src="grid.svg" style="width: 1.5rem; height: 1.5rem; filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
+                    <img class="gn-i d-block mx-auto mb-1" src="grid.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
                     Levels
                   </a>
                 </li>
