--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -24,7 +24,7 @@
     <div class="navbar top-bar">
         <div class="container top-bar__container">
             <a href="/" class="navbar-brand d-flex align-items-center">
-            <img class="gn-i me-3" src="shapes.svg" style="width: 2.875rem; height: 2.875rem; filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
+            <img class="gn-i me-3" src="shapes.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
             <span>Logic Learner</span>
             </a>
 
@@ -75,6 +75,7 @@
     </header>
 
     <!-- Grid -->
+<!-- 
     <div class="container">
 <div class="row mx-0">
     <div class="col-1 border border-primary border-end-0">1</div>
@@ -91,6 +92,7 @@
     <div class="col-1 border border-primary">12</div>
 </div>
 </div>
+ -->
 
 
     <section class="container content-body" id="maincontent">
