--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -8,7 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="top-bar.css">
+    <link rel="stylesheet" href="card.css">
     <link rel="stylesheet" href="button.css">
     <title>Question Dashboard - Logic Learner</title>
 </head>
@@ -54,9 +56,6 @@
 
 
 
-
-
-
 <main>
     <header class="bg-light py-2">
         <div class="container d-flex justify-content-start">
@@ -91,30 +90,58 @@
     <div class="col-1 border border-primary border-end-0">11</div>
     <div class="col-1 border border-primary">12</div>
 </div>
-</div>
  -->
+</div>
 
 
     <section class="container content-body" id="maincontent">
-        <h2 id="questionset" class="visually-hidden">Proof questions list in Novice level</h2>
-        <ol class="question-cards" aria-labelledby="questionset">
+        <h2 id="cardset-label" class="visually-hidden">Proof questions list in Novice level</h2>
+
+        <ol class="cardset" aria-labelledby="cardset-label">
+            <li class="cardset-card">
+                <div class="cardset-card__number">1</div>
+                <div class="cardset-card__title">Prove that <span class="question-statement">¬(¬p)</span> is logically equivalent to <span class="question-statement">p</span>.</div>
+                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-none.svg"></div>
+            </li>
+            <li class="cardset-card">
+                <div class="cardset-card__number">9</div>
+                <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
+                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-inprogress.svg"></div>
+            </li>
+            <li class="cardset-card">
+                <div class="cardset-card__number">10</div>
+                <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
+                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-completed.svg"></div>
+            </li>
+        </ol>
+
+
+
+
+<!-- 
+        <ol class="cardset-cards" aria-labelledby="cardset-label">
             <li>
+                <div class="cardset-number">1</div>
                 <div class="question-text">Prove that <span class="question-statement">¬(¬p)</span> is logically equivalent to <span class="question-statement">p</span>.</div>
-                <div class="question-state ms-auto" aria-label="Proof status: in progress"><img src="icon-q-inprogress.svg"></div>
+                <div class="question-state ms-auto"><img src="icon-q-inprogress.svg"></div>
             </li>
             <li>
+                <div class="cardset-number">2</div>
                 <div class="question-text d-block">Prove that <span class="question-statement">q→(p→q)</span> is a <span class="question-statement">tautology</span>.</div>
                 <div class="question-state ms-auto" aria-label="Proof status: completed"><img src="icon-q-completed.svg"></div>
             </li>
             <li>
+                <div class="cardset-number">3</div>
                 <div class="question-text d-block">Prove that <span class="question-statement">¬(p∧q)∧(p∨¬q)</span> is logically equivalent to <span class="question-statement">¬q</span>.</div>
                 <div class="question-state ms-auto" aria-label="Proof status: have not started"><img src="icon-q-todo.svg"></div>
             </li>
             <li>
+                <div class="cardset-number">4</div>
                 <div class="question-text d-block">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
                 <div class="question-state ms-auto" aria-label="Proof status: have not started"><img src="icon-q-todo.svg"></div>
             </li>
         </ol>
+ -->
 
     <button type="button" class="btn btn-light ll-button">
     <span class='ll-icons ll-button__icon'><img src="cat.svg" /></span>
