--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -101,17 +101,17 @@
             <li class="cardset-card">
                 <div class="cardset-card__number">1</div>
                 <div class="cardset-card__title">Prove that <span class="question-statement">¬(¬p)</span> is logically equivalent to <span class="question-statement">p</span>.</div>
-                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-none.svg"></div>
+                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-none.svg" title="Not started"></div>
             </li>
             <li class="cardset-card">
                 <div class="cardset-card__number">9</div>
                 <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
-                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-inprogress.svg"></div>
+                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-inprogress.svg" title="In progress"></div>
             </li>
             <li class="cardset-card">
                 <div class="cardset-card__number">10</div>
                 <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
-                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-completed.svg"></div>
+                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-completed.svg" title="Completed"></div>
             </li>
         </ol>
 
@@ -142,12 +142,10 @@
             </li>
         </ol>
  -->
-
     <button type="button" class="btn btn-light ll-button">
     <span class='ll-icons ll-button__icon'><img src="cat.svg" /></span>
     <span class='ll-button__text'>Cat button</span>
     </button>
-
 
     </section>
     
