--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -57,7 +57,7 @@
 
 
 <main>
-    <header class="bg-light py-2">
+    <header class="py-2" style="background-color: #efefef;">
         <div class="container d-flex justify-content-start">
             <figure class="avatar-level--md bg-dark me-3 align-self-center" style="--bs-bg-opacity: .25;" aria-hidden="true">
                 <img src="sonobe.svg" style="width: 100%;">
