--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="top-bar.css">
+    <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="card.css">
     <link rel="stylesheet" href="button.css">
     <title>Welcome - Logic Learner</title>
@@ -47,24 +48,19 @@
             </ul>
         </div>
     </div>
-
-
-
-
-
 </header>
 
 
 
 <main>
-    <header class="py-2" style="background-color: #efefef;">
-        <div class="container d-flex justify-content-start">
-            <figure class="avatar-level--md bg-dark me-3 align-self-center" style="--bs-bg-opacity: .25;" aria-hidden="true">
+    <header class="main-banner banner-hero">
+        <div class="container d-flex justify-content-center banner-hero__container">
+            <figure class="main-banner__avatar banner-hero__avatar align-self-center" aria-hidden="true">
                 <img src="sonobe.svg" style="width: 100%;">
             </figure>
-            <h1>
-                <span class="d-block">Home page</span>
-                <span class="fs-6 d-block">Some descriptive text here</span>
+            <h1 class="align-self-center">
+                <span class="main-banner__title banner-hero__title">Logic Learner</span>
+                <span class="main-banner__text banner-hero__text">Logic is the beginning of wisdom, not the end of it</span>
             </h1>
         </div>
     </header>
@@ -73,18 +69,18 @@
 <!-- 
     <div class="container">
 <div class="row mx-0">
-    <div class="col-1 border border-primary border-end-0">1</div>
-    <div class="col-1 border border-primary border-end-0">2</div>
-    <div class="col-1 border border-primary border-end-0">3</div>
-    <div class="col-1 border border-primary border-end-0">4</div>
-    <div class="col-1 border border-primary border-end-0">5</div>
-    <div class="col-1 border border-primary border-end-0">6</div>
-    <div class="col-1 border border-primary border-end-0">7</div>
-    <div class="col-1 border border-primary border-end-0">8</div>
-    <div class="col-1 border border-primary border-end-0">9</div>
-    <div class="col-1 border border-primary border-end-0">10</div>
-    <div class="col-1 border border-primary border-end-0">11</div>
-    <div class="col-1 border border-primary">12</div>
+    <div class="col-1 border border-primary border-end-0">grid 1</div>
+    <div class="col-1 border border-primary border-end-0">grid 2</div>
+    <div class="col-1 border border-primary border-end-0">grid 3</div>
+    <div class="col-1 border border-primary border-end-0">grid 4</div>
+    <div class="col-1 border border-primary border-end-0">grid 5</div>
+    <div class="col-1 border border-primary border-end-0">grid 6</div>
+    <div class="col-1 border border-primary border-end-0">grid 7</div>
+    <div class="col-1 border border-primary border-end-0">grid 8</div>
+    <div class="col-1 border border-primary border-end-0">grid 9</div>
+    <div class="col-1 border border-primary border-end-0">grid 10</div>
+    <div class="col-1 border border-primary border-end-0">grid 11</div>
+    <div class="col-1 border border-primary">grid 12</div>
 </div>
 </div>
  -->
