--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="top-bar.css">
+    <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="card.css">
     <link rel="stylesheet" href="button.css">
     <title>Question Dashboard - Logic Learner</title>
@@ -25,20 +26,20 @@
 
     <div class="navbar top-bar">
         <div class="container top-bar__container">
-            <a href="/" class="navbar-brand d-flex align-items-center">
+            <a href="levels-dashboard.html" class="navbar-brand d-flex align-items-center">
             <img class="gn-i me-3" src="sonobe.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
             <span>Logic Learner</span>
             </a>
 
             <ul class="nav col-auto top-bar__nav">
                 <li>
-                  <a href="#" class="nav-link">
+                  <a href="levels-dashboard.html" class="nav-link">
                     <img class="gn-i d-block mx-auto mb-1" src="home.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
                     Home
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">
+                  <a href="levels-dashboard.html" class="nav-link">
                     <img class="gn-i d-block mx-auto mb-1" src="grid.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
                     Levels
                   </a>
@@ -57,15 +58,15 @@
 
 
 <main>
-    <header class="py-2" style="background-color: #efefef;">
+    <header class="main-banner">
         <div class="container d-flex justify-content-start">
-            <figure class="avatar-level--md bg-dark me-3 align-self-center" style="--bs-bg-opacity: .25;" aria-hidden="true">
+            <figure class="main-banner__avatar align-self-center" aria-hidden="true">
                 <img src="sonobe-i.svg" style="width: 100%;">
             </figure>
-            <h1>
-                <span class="fs-6 d-block">LEVEL I</span>
-                <span class="d-block">Novice</span>
-                <span class="fs-6 d-block">Some descriptive text here</span>
+            <h1 class="align-self-center">
+                <span class="main-banner__subhead">LEVEL I</span>
+                <span class="main-banner__title">Novice</span>
+                <span class="main-banner__text">Some descriptive text here</span>
             </h1>
             <div class="ms-auto fs-4 q-completion align-self-center" aria-label="Questions completed">
                 3/10
@@ -77,21 +78,21 @@
 <!-- 
     <div class="container">
 <div class="row mx-0">
-    <div class="col-1 border border-primary border-end-0">1</div>
-    <div class="col-1 border border-primary border-end-0">2</div>
-    <div class="col-1 border border-primary border-end-0">3</div>
-    <div class="col-1 border border-primary border-end-0">4</div>
-    <div class="col-1 border border-primary border-end-0">5</div>
-    <div class="col-1 border border-primary border-end-0">6</div>
-    <div class="col-1 border border-primary border-end-0">7</div>
-    <div class="col-1 border border-primary border-end-0">8</div>
-    <div class="col-1 border border-primary border-end-0">9</div>
-    <div class="col-1 border border-primary border-end-0">10</div>
-    <div class="col-1 border border-primary border-end-0">11</div>
-    <div class="col-1 border border-primary">12</div>
+    <div class="col-1 border border-primary border-end-0">grid 1</div>
+    <div class="col-1 border border-primary border-end-0">grid 2</div>
+    <div class="col-1 border border-primary border-end-0">grid 3</div>
+    <div class="col-1 border border-primary border-end-0">grid 4</div>
+    <div class="col-1 border border-primary border-end-0">grid 5</div>
+    <div class="col-1 border border-primary border-end-0">grid 6</div>
+    <div class="col-1 border border-primary border-end-0">grid 7</div>
+    <div class="col-1 border border-primary border-end-0">grid 8</div>
+    <div class="col-1 border border-primary border-end-0">grid 9</div>
+    <div class="col-1 border border-primary border-end-0">grid 10</div>
+    <div class="col-1 border border-primary border-end-0">grid 11</div>
+    <div class="col-1 border border-primary">grid 12</div>
+</div>
 </div>
  -->
-</div>
 
 
     <section class="container content-body" id="maincontent">
