--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -92,17 +92,29 @@
         <ol class="cardset cardset-levels" aria-labelledby="cardset-label">
             <li class="cardset-card">
                 <div class="cardset-card__avatar"><img src="sonobe-i.svg"></div>
-                <div class="cardset-card__title"><a href="questions-dashboard.html">Novice</a></div>
+                <div class="d-flex flex-column">
+                    <div class="cardset-card__subhead">Level I</div>
+                    <div class="cardset-card__title align-self-start"><a href="questions-dashboard.html">Novice</a></div>
+                    <div class="cardset-card__text">Easy peasy, get a handle on things</div>
+                </div>
                 <div class="cardset-card__status" aria-label="Status: in progress">1</div>
             </li>
             <li class="cardset-card">
                 <div class="cardset-card__avatar"><img src="sonobe-ii.svg"></div>
-                <div class="cardset-card__title">Learner</div>
+                <div class="d-flex flex-column">
+                    <div class="cardset-card__subhead">Level II</div>
+                    <div class="cardset-card__title align-self-start">Learner</div>
+                    <div class="cardset-card__text">Next level up, time to grow!</div>
+                </div>
                 <div class="cardset-card__status" aria-label="Status: in progress">1</div>
             </li>
             <li class="cardset-card">
                 <div class="cardset-card__avatar"><img src="sonobe-iii.svg"></div>
-                <div class="cardset-card__title">Apprentice</div>
+                <div class="d-flex flex-column">
+                    <div class="cardset-card__subhead">Level II</div>
+                    <div class="cardset-card__title">Apprentice</div>
+                    <div class="cardset-card__text">Onward, smarty pants!</div>
+                </div>
                 <div class="cardset-card__status" aria-label="Status: in progress">1</div>
             </li>
         </ol>
