--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -91,31 +91,34 @@
 
         <ol class="cardset cardset-levels" aria-labelledby="cardset-label">
             <li class="cardset-card">
-                <div class="cardset-card__avatar"><img src="sonobe-i.svg"></div>
+                <figure class="cardset-card__avatar"><img src="sonobe-i.svg"></figure>
                 <div class="d-flex flex-column">
                     <div class="cardset-card__subhead">Level I</div>
                     <div class="cardset-card__title align-self-start"><a href="questions-dashboard.html">Novice</a></div>
                     <div class="cardset-card__text">Easy peasy, get a handle on things</div>
                 </div>
-                <div class="cardset-card__status" aria-label="Status: in progress">1</div>
+                <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
             <li class="cardset-card">
-                <div class="cardset-card__avatar"><img src="sonobe-ii.svg"></div>
+                <figure class="cardset-card__avatar"><img src="sonobe-ii.svg"></figure>
                 <div class="d-flex flex-column">
                     <div class="cardset-card__subhead">Level II</div>
                     <div class="cardset-card__title align-self-start">Learner</div>
                     <div class="cardset-card__text">Next level up, time to grow!</div>
                 </div>
-                <div class="cardset-card__status" aria-label="Status: in progress">1</div>
+                <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
             <li class="cardset-card">
-                <div class="cardset-card__avatar"><img src="sonobe-iii.svg"></div>
+                <figure class="cardset-card__avatar"><img src="sonobe-iii.svg"></figure>
                 <div class="d-flex flex-column">
                     <div class="cardset-card__subhead">Level II</div>
                     <div class="cardset-card__title">Apprentice</div>
                     <div class="cardset-card__text">Onward, smarty pants!</div>
                 </div>
-                <div class="cardset-card__status" aria-label="Status: in progress">1</div>
+                <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
         </ol>
 
@@ -146,7 +149,7 @@
             </li>
         </ol>
  -->
-    <button type="button" class="btn btn-light ll-button">
+    <button type="button" class="mt-5 btn btn-light ll-button">
     <span class='ll-icons ll-button__icon'><img src="cat.svg" /></span>
     <span class='ll-button__text'>Cat button</span>
     </button>
