--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -92,9 +92,9 @@
         <ol class="cardset cardset-levels" aria-labelledby="cardset-label">
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="sonobe-i.svg"></figure>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level I</div>
-                    <div class="cardset-card__title align-self-start"><a href="questions-dashboard.html">Novice</a></div>
+                    <div class="cardset-card__title level-name"><a href="questions-dashboard.html">Novice</a></div>
                     <div class="cardset-card__text">Easy peasy, get a handle on things</div>
                 </div>
                 <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
@@ -102,9 +102,9 @@
             </li>
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="sonobe-ii.svg"></figure>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level II</div>
-                    <div class="cardset-card__title align-self-start">Learner</div>
+                    <div class="cardset-card__title level-name">Learner</div>
                     <div class="cardset-card__text">Next level up, time to grow!</div>
                 </div>
                 <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
@@ -112,9 +112,9 @@
             </li>
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="sonobe-iii.svg"></figure>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level II</div>
-                    <div class="cardset-card__title">Apprentice</div>
+                    <div class="cardset-card__title level-name">Apprentice</div>
                     <div class="cardset-card__text">Onward, smarty pants!</div>
                 </div>
                 <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
