--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -97,8 +97,8 @@
                     <div class="cardset-card__title level-name"><a href="questions-dashboard.html">Novice</a></div>
                     <div class="cardset-card__text">Easy peasy, get a handle on things</div>
                 </div>
-                <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
-                <div class="cardset-card__prompt">&rsaquo;</div>
+                <div class="cardset-card__status-count" aria-label="Questions completed"><a href="questions-dashboard.html">9/10</a></div>
+                <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="sonobe-ii.svg"></figure>
