--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="card.css">
     <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="footer.css">
     <title>Welcome - Logic Learner</title>
 </head>
 <body>
@@ -26,20 +27,20 @@
 
     <div class="navbar top-bar">
         <div class="container top-bar__container">
-            <a href="/" class="navbar-brand d-flex align-items-center">
+            <a href="levels-dashboard.html" class="navbar-brand d-flex align-items-center">
             <img class="gn-i me-3" src="sonobe.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
             <span>Logic Learner</span>
             </a>
 
             <ul class="nav col-auto top-bar__nav">
                 <li>
-                  <a href="#" class="nav-link">
+                  <a href="levels-dashboard.html" class="nav-link">
                     <img class="gn-i d-block mx-auto mb-1" src="home.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
                     Home
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="nav-link">
+                  <a href="levels-dashboard.html" class="nav-link">
                     <img class="gn-i d-block mx-auto mb-1" src="grid.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
                     Levels
                   </a>
@@ -149,9 +150,14 @@
             </li>
         </ol>
  -->
-    <button type="button" class="mt-5 btn btn-light ll-button">
+    <button type="button" class="cat-button btn btn-light ll-button">
     <span class='ll-icons ll-button__icon'><img src="cat.svg" /></span>
-    <span class='ll-button__text'>Cat button</span>
+    <span class="ll-button__text d-inline-block d-sm-none">X-Small, tiny cat, <576px </span>
+    <span class="ll-button__text d-none d-sm-inline-block d-md-none">Small, sm cat, ≥576px </span>
+    <span class="ll-button__text d-none d-md-inline-block d-lg-none">Medium, md cat, ≥768px </span>
+    <span class="ll-button__text d-none d-lg-inline-block d-xl-none">Large, lg cat, ≥992px </span>
+    <span class="ll-button__text d-none d-xl-inline-block d-xxl-none">Extra large, xl chonky, ≥1200px </span>
+    <span class="ll-button__text d-none d-xxl-inline-block">Extra extra large, xxl cat, ≥1400px </span>
     </button>
 
     </section>
@@ -160,13 +166,10 @@
 
 </main>
 
-<footer class="border container">
-    <div class="d-inline-block d-sm-none bg-primary text-white">X-Small, None, <576px </div>
-    <div class="d-none d-sm-inline-block d-md-none bg-secondary text-white">Small, sm, ≥576px </div>
-    <div class="d-none d-md-inline-block d-lg-none bg-success text-white">Medium, md, ≥768px </div>
-    <div class="d-none d-lg-inline-block d-xl-none bg-danger text-white">Large, lg, ≥992px </div>
-    <div class="d-none d-xl-inline-block d-xxl-none bg-warning text-dark">Extra large, xl, ≥1200px </div>
-    <div class="d-none d-xxl-inline-block bg-info text-dark">Extra extra large, xxl, ≥1400px </div>
+<footer class="bg-light">
+    <div class="container">
+        Footer
+    </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
