--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="icon.css">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="top-bar.css">
     <link rel="stylesheet" href="banner.css">
@@ -28,20 +29,20 @@
     <div class="navbar top-bar">
         <div class="container top-bar__container">
             <a href="levels-dashboard.html" class="navbar-brand d-flex align-items-center">
-            <img class="gn-i me-3" src="sonobe.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
+            <img class="gn-i me-3 temp-icon" src="temp-icon-sonobe.svg">
             <span>Logic Learner</span>
             </a>
 
             <ul class="nav col-auto top-bar__nav">
                 <li>
                   <a href="levels-dashboard.html" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1" src="home.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
+                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="temp-icon-home.svg">
                     Home
                   </a>
                 </li>
                 <li>
                   <a href="levels-dashboard.html" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1" src="grid.svg" style="filter: invert(98%) sepia(75%) saturate(128%) hue-rotate(275deg) brightness(112%) contrast(100%);">
+                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="temp-icon-grid.svg">
                     Levels
                   </a>
                 </li>
@@ -57,7 +58,7 @@
     <header class="main-banner banner-hero">
         <div class="container d-flex justify-content-center banner-hero__container">
             <figure class="main-banner__avatar banner-hero__avatar align-self-center" aria-hidden="true">
-                <img src="sonobe.svg" style="width: 100%;">
+                <img src="temp-icon-sonobe.svg" style="width: 100%;">
             </figure>
             <h1 class="align-self-center">
                 <span class="main-banner__title banner-hero__title">Logic Learner</span>
