--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -8,11 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="skippy.css">
+    <link rel="stylesheet" href="typeface.css">
     <link rel="stylesheet" href="icon.css">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="top-bar.css">
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="card.css">
+    <link rel="stylesheet" href="question.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="footer.css">
     <title>Welcome - Logic Learner</title>
@@ -58,7 +61,7 @@
     <header class="main-banner banner-hero">
         <div class="container d-flex justify-content-center banner-hero__container">
             <figure class="main-banner__avatar banner-hero__avatar align-self-center" aria-hidden="true">
-                <img src="temp-icon-sonobe.svg" style="width: 100%;">
+                <img src="temp-icon-sonobe.svg">
             </figure>
             <h1 class="align-self-center">
                 <span class="main-banner__title banner-hero__title">Logic Learner</span>
@@ -89,7 +92,7 @@
 
 
     <section class="container content-body" id="maincontent">
-        <h2 id="cardset-label" class="text-center">Choose a level</h2>
+        <h2 id="cardset-label" class="text-center mb-4">Choose a level</h2>
 
         <ol class="cardset cardset-levels" aria-labelledby="cardset-label">
             <li class="cardset-card">
