--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -104,24 +104,68 @@
 
 
     <section class="container content-body exercise-space" id="maincontent">
-        <p class="fs-2 my-5">Prove that  <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</p>
+        <p class="fs-2 mt-5 mb-4">Prove that  <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</p>
 
-        <div class="exercise-solution border border-2 p-2 border-dark">
-            <div class="solution-step border border-2 p-2 border-primary">
-                <p class="solution-step__prompt border border-2 p-2 border-info">Prompt</p>
-                <div class="solution-step__form row border border-2 p-2 border-success">
-                    <div class="col-12 col-md-4 border border-2 p-2 border-secondary">
-                        Law selection
+        <div class="exercise-solution">
+            <div class="solution-step py-4" style="border-bottom: 1px dashed #bbb;">
+                <p class="solution-step__prompt">To begin this proof,</p>
+                <form>
+                    <div class="solution-step__form row">
+                        <div class="col-12 col-md-4">
+                            <label for="inputLaw" class="form-label">If I apply this law...</label>
+                            <select id="inputLaw" class="form-select">
+                                <option selected>Choose one</option>
+                                <option>...</option>
+                                <option>...</option>
+                            </select>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <label for="inputStatement" class="form-label">Then I'll get this statement...</label>
+                            <input type="text" class="form-control" id="inputStatement" placeholder="Logic statement">
+                        </div>
+                        <div class="col-12 col-md-3 align-self-end">
+                            <button type="button" class="btn ll-button">
+                                <span class="ll-button__text">Delete</span>
+                            </button>
+                            <button type="button" class="btn ll-button">
+                                <span class="ll-button__text">Go!</span>
+                            </button>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-4 border border-2 p-2 border-secondary">
-                        Statement input
-                    </div>
-                    <div class="col-12 col-md-4 border border-2 p-2 border-secondary">
-                        Delete Submit
-                    </div>
-                </div>
+                </form>
             </div>
         </div>
+
+        <div class="exercise-solution">
+            <div class="solution-step py-4" style="border-bottom: 1px dashed #bbb;">
+                <p class="solution-step__prompt">Next,</p>
+                <form>
+                    <div class="solution-step__form row">
+                        <div class="col-12 col-md-4">
+                            <label for="inputLaw" class="form-label">If I apply this law...</label>
+                            <select id="inputLaw" class="form-select">
+                                <option selected>Choose one</option>
+                                <option>...</option>
+                                <option>...</option>
+                            </select>
+                        </div>
+                        <div class="col-12 col-md-5">
+                            <label for="inputStatement" class="form-label">Then I'll get this statement...</label>
+                            <input type="text" class="form-control" id="inputStatement" placeholder="Logic statement">
+                        </div>
+                        <div class="col-12 col-md-3 align-self-end">
+                            <button type="button" class="btn ll-button">
+                                <span class="ll-button__text">Delete</span>
+                            </button>
+                            <button type="button" class="btn ll-button">
+                                <span class="ll-button__text">Go!</span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
 
 
 <!-- 
